2006-01-28  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed a few bugs for objects with shape # >1023.

2006-01-28  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* cheat_screen.cc: The 'Teleport to NPC' function now moves you
	  to the correct map.
	* objs.h: Added a 'shortcut' get_map_num() member function for
	  easier retrieval of an object's current map.
	* intrinsics.cc, ucinternal.h, bgintrinsics.h, siintrinsics.h:
	  Added intrinsic get_map_num.
	* All files but the header files: Modified to use get_map_num().

2006-01-23  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamedat.cc, gamedat.h: Fixed saving and loading multimap saves
	  with level 2 zip compression. The fix uses internal mapXX files
	  (similar in structure to the GAMEDAT file used for the default
	  map) to store the files in <GAMEDAT>/mapXX dirs. Still need to
	  fix the flex saves for multimap capabilities (tagged with a
	  'TODO:').
	* gamewin.cc: Fixing a rare crash when changing maps followed by
	  F3 teleport.

2006-01-22    <jeff@mini.nerble.net>

	* schedule.cc: Improved 'talk' schedule so that NPC won't talk
	until close, and will call to you like in the original.

2006-01-22  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamedat.cc: Improved the previous fix to make it safer. Note
	  that level 2 compression is still incompatible with multimaps
	  (or, for that matter, so are the flex saves). I am still trying
	  to work out a way to fix that *and* keep compatibility with older
	  saves; relevant sections are tagged with a 'TODO:'. Any takers?
	* gamewin.cc: Fixed bug in loading of multimap games. Basically,
	  only map #0 would be loaded, causing data loss when saving maps
	  or games unless the player visited the other maps.
	* actors.cc: approach_another now moves NPCs to the correct
	  destination map before trying to pathfind.
	
2006-01-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed resurrection bug -- using (e.g.) Death Bolt