@@ -38,6 +38,8 @@
 #include "Astar.h"
 #include "Audio.h"
 #include "Configuration.h"
+#include "chunks.h"
+#include "gamemap.h"
 #include "Face_stats.h"
 #include "Flex.h"
 #include "Gump.h"
@@ -48,7 +50,6 @@
 #include "barge.h"
 #include "bodies.h"
 #include "cheat.h"
-#include "chunks.h"
 #include "chunkter.h"
 #include "combat_opts.h"
 #include "delobjs.h"
@@ -61,7 +62,6 @@
 #include "fnames.h"
 #include "game.h"
 #include "gamewin.h"
-#include "gamemap.h"
 #include "gameclk.h"
 #include "gamerend.h"
 #include "items.h"
