@@ -1,3 +1,8 @@
+2006-01-29    <jeff@mini.nerble.net>
+
+	* actors.cc,npcnear.cc,objs.h:  Stop schedules of NPC's who are
+	off the current map.
+
 2006-01-28  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Fixed a few bugs for objects with shape # >1023.
 
